Refactor field handling and scrolling logic